[package]
name = "certhoover"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse-rs = "=1.1.0-alpha.1"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.32", features = ["rt-multi-thread", "full"] }
tungstenite = { version = "0.21.0", features=["native-tls"] }
